feat(serving): 从 v4 移植控制面配置拉取与热重载
总体原则：配置都从 main_control_service 获取。

v4 的 agent_serving_zdy 本就是这么实现的，但 268f9f1「纳入同事
agent_java2/main_control_service2 的工作到主目录」用同事那份实现替换了它，
带来算子/范式系统的同时静默丢掉了整个控制面集成。本提交把它移植回来，
嫁接到当前实现上。

控制面（Python）新增：
- GET  /api/v1/serving-config     聚合 per-domain 配置供 serving 拉取
- POST /api/v1/admin/reload-serving  扇出热重载到各 serving 实例
只下发 serving 真正消费的部分：registry 的 enabled / default_channel /
内联 database 块，加上 scenario pack 的 serving: 段。ontology:/mining:
不下发——serving 从不读它们。

Serving（Java）新增：
- MainControlClient      HTTP 拉取 + 解析
- ServingConfigSnapshot  不可变快照
- DatabaseConfig         内联 DB 配置，resolvedJdbcUrl() 补 jdbc: 前缀，
                         signature() 用于 reload 时只重建变了的池
- ConfigReloadService    拉取→应用；失败回落本地文件（IntelliJ/测试）
- AdminController        POST /api/v1/admin/reload-config

改造：DomainRegistry / DomainPackReader 去掉 @PostConstruct 读文件，改为
apply(snapshot) + volatile 原子替换；DomainPoolManager 改用 DatabaseConfig
并新增 invalidate()。同时完成 Java 侧路径重指（承接上一个提交）。

顺带修好三个老问题：
- Java 改配置必须重启 → 现在有 reload 端点
- DomainPackReader 从顶层读 entity_types 等 4 个字段，但它们嵌在
  ontology:/mining: 下 → 恒为空；控制面直吐 serving: 段，该问题消失
- DomainPackReader 扫目录拿目录名当 domainId，在 scenario_pack != domain_id
  时是错的 → 快照按 domain_id 索引，映射由控制面解析

两处有意偏离 v4：
- 文件兜底改读内联 database: 块（v4 读 database_url_env，那是已删除的旧
  root registry 的 schema）——否则兜底与 HTTP 两条路径行为分叉
- 不移植 v4 的 serving.embedding / serving.rerank：当前实现有意让模型由
  llm_service 决定

行为变化：registry 里写了 database: 的域，serving 现在会为其建专用池并
真的连那个库，连不上抛 domain_database_unavailable(503)，不再静默回落
默认库。删掉该域的 database: 块即可回到共享默认库。

ServingDomainProfile 砍掉 entityTypes/strongEntityTypes/evalQuestions
三个字段——生产代码零使用，且它们只存在于不下发的 ontology:/mining: 段。
scenario_pack_missing 随之成为死代码（新架构下「缺 pack」与「合法地没有
override」都表现为空 serving: {}，无法区分），异常映射保留。

MainControlClientTest 按 Python get_serving_config() 的输出逐键构造 payload
锁住跨语言契约——改任一侧的键名，它是唯一能拦住的东西，编译器拦不住。

验证：mvn -o test 219 tests / 0 failures（清 target 后全量重编）；
Python 侧经 TestClient 实跑端点；两侧键集合已程序化交叉核对。

Co-Authored-By: Claude Opus 4.8 (1M c